Vesrion 1.54:
	- Merged the CPU lanczos code from the msieve-lacuda branch, which 
		includes long vector support; compiling with long vectors on
		a modern machine with a modern gcc has yielded a 10-15%
		speedup
	- Fixed errors in MPI block Lanczos (thanks Greg Childers)
	- NFS Polynomial selection updates from many people:
		- improved estimate of final e-value
		- improved handling of the factors of leading alg. coefficient
		- reduced verbosity
		- search bounds informed by years of mersenneforum work
	- Removed exit() call from error path in NFS filtering (thanks jrcrombie)
	- Made the maximum merge weight configurable (thanks Lionel Debroux)
	- Updated the makefile to build GPU code for more recent GPUs
	- Updated CUB version
	- Added a fix that avoids a crash when linking to GMP 6.2.0 
		(thanks bsquared)
	- Changed the default NFS filtering target density to 90

Version 1.53: 11/11/16
	- Replaced the GPU sorting library with calls to CUB; this is more
		compatible with the latest GPU models and works with CUDA
		toolkits more recent than v5.5, which the old library was
		stuck with
	- Added primality proving of factors found (thanks David Cleaver /
		Brian Gladman)
	- Added a primality test for factors of NFS relations; apparently
		the sieving tools will occasionally output relations with 
		factors that are composite, and this may be the cause of
		mysterious problems with extremely large jobs
	- Modified the matrix build in the NFS linear algebra to always use
		quadratic characters near 2^32, to always choose them so they
		do not occur in relations, and to decide the number of 
		characters at runtime with a compiled-in maximum. This paranoia
		should prevent huge factorizations from failing in the
		square root, like almost happened to Greg Childers
	- Added an old fix for potential memory corruption doing NFS filtering
		with extremely large datasets, since the patch actually
		saved a factorization from failing (thanks Greg Childers)